--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -75,7 +75,7 @@ about:
 experience:
   enable: true
   title: "Experience & Services"
-  description: "<br><b> <b> <b> Marketing </b> <br>  &#x2022; Automated Marketing Mix Modeling (MMM | Facebook Robyn) <br>  &#x2022; Customer Lifetime Value with Machine Learning (CLV | RFM)  <br> &#x2022; Causal Machine Learning Marketing (Uber's CausalML) <br> &#x2022; Customer Segmentation Analysis (Scikit Learn & H2O) <br> &#x2022; NLP Topic Modeling Customer Survey (PyCaret | GENSIM) <br> &#x2022; Price Elasiticity & Automation (XGBoost | pyGAM) <br> &#x2022; A/B Testing <br> </br> <strong> <strong> <strong> Finance </strong> </strong> </strong> <br> &#x2022; Price forecasting (Multivariate | ARIMA | LSTM) <br> &#x2022; NLP For Predictive Business Modeling (Text Recipes) <br> &#x2022; Deep Learning for Loan Default Scoring (Torch | Tabnet) <br> &#x2022; Time Series with Spark (Modeltime | Google Analytics Forecast) <br> &#x2022; Forecasting at Scale (MetaFlow | Modeltime | AWS) <br> &#x2022; Bankruptcy Prediction AP (H2O | MLFlow) <br>" 
+  description: "<b> <b> <b> Marketing </b> <br>  &#x2022; Automated Marketing Mix Modeling (MMM | Facebook Robyn) <br>  &#x2022; Customer Lifetime Value with Machine Learning (CLV | RFM)  <br> &#x2022; Causal Machine Learning Marketing (Uber's CausalML) <br> &#x2022; Customer Segmentation Analysis (Scikit Learn & H2O) <br> &#x2022; NLP Topic Modeling Customer Survey (PyCaret | GENSIM) <br> &#x2022; A/B Testing <br> </br> <strong> <strong> <strong> Finance </strong> </strong> </strong> <br> &#x2022; Price forecasting (Multivariate | ARIMA | LSTM) <br> &#x2022; NLP For Predictive Business Modeling (Text Recipes) <br> &#x2022; Deep Learning for Loan Default Scoring (Torch | Tabnet) <br> &#x2022; Time Series with Spark (Modeltime | Google Analytics Forecast) <br> &#x2022; Forecasting at Scale (MetaFlow | Modeltime | AWS)  <br> <br> <b> <b> <b> Survey Methdology </b> </b> </b> <br>  &#x2022; Survey design and execution (experimental, longitudinal) <br> &#x2022; Descriptive and inferential data analysis (R, Python, STATA) <br> &#x2022; Data visualization <br>" # &#x2022; Price Elasiticity & Automation (XGBoost | pyGAM) <br> <br> &#x2022; Bankruptcy Prediction AP (H2O | MLFlow)
   button2:
     icon: "icon-smile-fill"
     btnText: "About DataIQ"
@@ -281,30 +281,51 @@ client_and_work:
 
 # testimonial
 testimonial:
-  enable: false
+  enable: true
   title: "Testimonials"
   items:
   
-    - name: "Maria Diaz, PhD"
-      position: "Head of Fellowship @ Faculty | AI"
-      content: "In less than 2 months after starting his Faculty AI Data Science Fellowship, Fatih had transitioned into a role as a data scientist with the Fossil Fuel Non-Proliferation Treaty Initiative!"
+    - name: "Tobias Brosch, PhD"
+      position: "Professor in Psychology of Sustainable Development | University of Geneva"
+      content: "Fatih Uenal has particularly strong knowledge and expertise in different types of data analysis. He has carried out his mission with autonomy and efficiency. His involvement and skills were appreciated by the whole team."
       image:
-        x: "img/testimonials/maria.jpg"
-        _2x: "img/testimonials/maria.jpg"
+        x: "img/testimonials/tobias_brosch.jpg"
+        _2x: "img/testimonials/tobias_brosch.jpg"
         
-    - name: "Prof. Peter Newell"
-      position: "Professor of International Relations, University of Sussex"
-      content: "Because of all the data science and AI skills Fatih has provided, we have brought our database to life and can share it with people all around the world. Setting up shiny dashboards on Digital Ocean was extremely helpful providing access to our database."
-      image:
-        x: "img/testimonials/Peter.jpg"
-        _2x: "img/testimonials/Peter.jpg"
-
-    - name: "Prof. Sander van der Linden"
-      position: "Professor of Social Psychology, University of Cambridge"
-      content: "Thanks to Fatih's skills in machine learning, we were able to analyze our big data sets and gain valuable insights into Europeans' energy preferences.q"
+    - name: "Sander van der Linden, PhD"
+      position: "Professor in Social Psychology | University of Cambridge"
+      content: "Thanks to Fatih's skills in data analysis and machine learning, we were able to conduct big data analysis and gain valuable insights into Europeans' energy preferences. "
       image:
         x: "img/testimonials/sander.jpg"
         _2x: "img/testimonials/sander.jpg"
+        
+    - name: "Ruth Fortmann, PhD"
+      position: "Head of Fellowship @ Faculty.ai | BCG Gamma"
+      content: "In less than 2 months after starting his Faculty AI Data Science Fellowship, Fatih had sucessfully transitioned into a role as a data scientist with the Fossil Fuel Non-Proliferation Treaty Initiative. "
+      image:
+        x: "img/testimonials/ruth_fortmann.jpg"
+        _2x: "img/testimonials/ruth_fortmann.jpg"
+        
+    - name: "Frederick Daley"
+      position: "Research Associate at the Centre for Global Political Economy | University of Sussex"
+      content: "Because of all the rigourous data science and AI skills Fatih has provided, we have brought our database to life and can share it with people all around the world. Setting up shiny dashboards on the cloud was extremely helpful providing access to our database."
+      image:
+        x: "img/testimonials/frederick_daley.jpg"
+        _2x: "img/testimonials/frederick_daley.jpg"
+
+    - name: "Alex Rafalowicz"
+      position: "Director @ Fossil Fuel Non-Proliferation Treaty "
+      content: "Thank you for your excellent work, Fatih. Great to see Fossil Fuel Non-Proliferation Tracker come to life via your creativity and ingenuity."
+      image:
+        x: "img/testimonials/alex_rafalowicz.jpg"
+        _2x: "img/testimonials/alex_rafalowicz.jpg"
+    
+    - name: "Jim Sidanius, PhD"
+      position: "Professor of Psychology | Harvard University"
+      content: "During his two years as a postdoctoral researcher in my lab at Harvard University, Fatih has demonstrated a highly detail oriented, and analytical mindset with in-depth statistical analysis skills. "
+      image:
+        x: "img/testimonials/jim_sidanius.jpg"
+        _2x: "img/testimonials/jim_sidanius.jpg"
 
 # contact
 contact:
@@ -325,7 +346,7 @@ contact:
     email: '<a href="mailto:mars.fatih@gmail.com">mars.fatih@gmail.com</a>'
   address:
     title: "Address"
-    address: "Petit Saconnex, 1209 Genève"
+    address: "1209 Genève"
   
 
 # newsletter
