--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -57,7 +57,8 @@ about:
   content: 
     <p class="lead">
     <strong> With over 8 years of experience working in consulting, industry, academia, and government, I help organizations understand and leverage 
-    the full potential of their data.</strong> I focus on applying machine learning, deep learning, and survey methodology techniques in the <strong>Marketing</strong> and <strong>Finance</strong> domains to improve data-based decision-making. <br> 
+    the full potential of their data.</strong> <br> <br>  I focus on applying data analytics, machine learning, deep learning, and survey methodology techniques to improve data-based decision-making. 
+    My specializization is in NLP, time series analysis, and predictive modeling at the cross-section of <strong>Marketing</strong> and <strong>Finance</strong>.  <br> 
     </p>
     <p class="lead">
     Besides data science consultancy, DataIQ provides research services for the University of Geneva focusing on evidenced-based communication strategies to facilitate behavior change
