--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -58,8 +58,8 @@ about:
     <p class="lead">
     With over 8 years of experience working in consulting, industry, academia, and government, I help organizations understand and leverage 
     the full potential of their data. I focus on applying data analytics, machine learning, and  deep learning to improve data-based decision-making. 
-    My specialization is in NLP, time series analysis, and predictive modeling at the cross-section of Marketing</strong> and Finance.
-    Besides data science consultancy, I provide expertise in survey methodology and design (experimental & longitudinal). <br> 
+    <br> <br> My specialization is in time series analysis, forecasting, and predictive modeling at the cross-section of Finance and Marketing.
+    # Besides data science and analytics consultancy, I provide expertise in survey methodology and design (experimental & longitudinal). <br> 
     # </p>
     # <p class="lead">
     # Besides data science consultancy, DATAIQ provides expertise in survey methodology and design (experimental & longitudinal). 
