--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -57,8 +57,9 @@ about:
   content: 
     <p class="lead">
     With over 8 years of experience working in consulting, industry, academia, and government, I help organizations understand and leverage 
-    the full potential of their data. I focus on applying data analytics, machine learning, and  deep learning to improve data-based decision-making. 
-    <br> <br> My specialization is in time series analysis, forecasting, and predictive modeling at the cross-section of Sustainability, Finance, and Marketing.
+    the full potential of their data. I focus on applying data analytics, machine learning, and  deep learning to improve data-based decision-making.  
+    My specialization is in time series analysis, forecasting, and predictive modeling at the cross-section of Sustainability, Finance, and Marketing. <br> <br>
+    When I am not data sciencing, I like to hike and travel. I teach and practice Yoga.
     # Besides data science and analytics consultancy, I provide expertise in survey methodology and design (experimental & longitudinal). <br> 
     # </p>
     # <p class="lead">
